---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "include": ["test.js"]
  },
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "warn"
      }
    }
  }
}
```

## `test.js`

```js
debugger;
```

# Emitted Messages

```block
The number of diagnostics exceeds the number allowed by Biome.
Diagnostics not shown: 1.
```

```block
Checked 1 file(s) in <TIME>
```


